# default-struct-builder

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: builder.rs  lib.rs
